--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-web-component-shards",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Gulp plugin for web-component-shards",
   "main": "index.js",
   "scripts": {
@@ -25,6 +25,6 @@
   "homepage": "https://github.com/Collaborne/gulp-web-component-shards#readme",
   "dependencies": {
     "gulp": "^3.9.1",
-    "web-component-shards": "^1.1.3"
+    "web-component-shards": "Collaborne/web-component-shards#fix/paths-and-url-confusion"
   }
 }
