--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "homepage": "https://github.com/Collaborne/gulp-web-component-shards#readme",
   "dependencies": {
     "gulp": "^3.9.1",
-    "web-component-shards": "Collaborne/web-component-shards#fix/paths-and-url-confusion"
+    "web-component-shards": "Collaborne/web-component-shards#debug/dependency-report"
   }
 }
