Load shards module from my excludes branch

--- a/package.json
+++ b/package.json
@@ -22,6 +22,6 @@
   "homepage": "https://github.com/Collaborne/gulp-web-component-shards#readme",
   "dependencies": {
     "gulp": "^3.9.1",
-    "web-component-shards": "Collaborne/web-component-shards#debug/dependency-report"
+    "web-component-shards": "naoak/web-component-shards#excludes"
   }
 }
